--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/style.css">
     <title>My Simple Web</title>
 </head>
 <body>
-    
+    <div>
+        <h3>My first Web site</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit in exercitationem minus ad? Provident illo delectus quaerat quibusdam ipsam accusantium, quo cupiditate voluptas consequuntur quia, debitis expedita praesentium consequatur ducimus.</p>
+    </div>
 </body>
 </html>
