--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
         <h3>My first Web site</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit in exercitationem minus ad? Provident illo delectus quaerat quibusdam ipsam accusantium, quo cupiditate voluptas consequuntur quia, debitis expedita praesentium consequatur ducimus.</p>
     </div>
+    <div>
+        <h3>My first Web site</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit in exercitationem minus ad? Provident illo delectus quaerat quibusdam ipsam accusantium, quo cupiditate voluptas consequuntur quia, debitis expedita praesentium consequatur ducimus.</p>
+    </div>
+    <div>
+        <h3>My first Web site</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit in exercitationem minus ad? Provident illo delectus quaerat quibusdam ipsam accusantium, quo cupiditate voluptas consequuntur quia, debitis expedita praesentium consequatur ducimus.</p>
+    </div>
 </body>
 </html>
