commit from external terminal

--- a/index.html
+++ b/index.html
@@ -8,16 +8,24 @@
 </head>
 <body>
     <div>
-        <h3>My first Web site</h3>
+        <h3>My first Blog Post</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit in exercitationem minus ad? Provident illo delectus quaerat quibusdam ipsam accusantium, quo cupiditate voluptas consequuntur quia, debitis expedita praesentium consequatur ducimus.</p>
     </div>
     <div>
-        <h3>My first Web site</h3>
+        <h3>My Second Blog Post</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit in exercitationem minus ad? Provident illo delectus quaerat quibusdam ipsam accusantium, quo cupiditate voluptas consequuntur quia, debitis expedita praesentium consequatur ducimus.</p>
     </div>
     <div>
-        <h3>My first Web site</h3>
+        <h3>My Third Blog post</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit in exercitationem minus ad? Provident illo delectus quaerat quibusdam ipsam accusantium, quo cupiditate voluptas consequuntur quia, debitis expedita praesentium consequatur ducimus.</p>
+    </div>
+    <div>
+        <h3>How to Push increaamental</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaning full commit message"</li>
+            <li>git push</li>
+        </ul>
     </div>
 </body>
 </html>
