rounded pic added

--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
             <li>git push</li>
         </ul>
     </div>
+    <div>
+        <h3>My Rounded Pic</h3>
+        <img src="images/my_rounded_img.png" alt="">
+    </div>
 </body>
 </html>
